--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,24 @@
 {
-  "presets": ["@babel/preset-env", "@babel/preset-reacct"]
+  "presets": [
+    [
+      "@babel/preset-env",
+      {
+        "targets": {
+          "node": "8"
+        }
+      }
+    ],
+    "@babel/preset-react"
+  ],
+  "plugins": [
+    [
+      "module-resolver",
+      {
+        "root": ["src"],
+        "alias": {
+          "test": "test"
+        }
+      }
+    ]
+  ]
 }
