--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,6 @@
 {
   "parser": "@typescript-eslint/parser",
   "extends": [
-    "plugin:react/recommended",
     "plugin:@typescript-eslint/recommended"
   ],
   "parserOptions": {
@@ -12,9 +11,5 @@
     "sourceType": "module"
   },
   "rules": {},
-  "settings": {
-    "react": {
-      "version": "detect"
-    }
-  }
+  "settings": {}
 }
