--- a/package.json
+++ b/package.json
@@ -8,24 +8,39 @@
   "license": "MIT",
   "private": false,
   "types": "types/index.d.ts",
+  "engines": {
+    "node": ">=8"
+  },
+  "scripts": {
+    "lint": "eslint src/**/*",
+    "build": "rollup -c rollup.config.js"
+  },
   "devDependencies": {
     "@babel/core": "^7.7.5",
     "@babel/preset-env": "^7.7.6",
     "@babel/preset-react": "^7.7.4",
+    "@types/loader-utils": "^1.1.3",
+    "@types/webpack": "^4.41.0",
     "@typescript-eslint/eslint-plugin": "^2.11.0",
     "@typescript-eslint/parser": "^2.11.0",
+    "babel-jest": "^24.9.0",
+    "babel-plugin-module-resolver": "^4.0.0",
     "builtin-modules": "^3.1.0",
     "eslint": "^6.7.2",
+    "jest": "^24.9.0",
     "rollup": "^1.27.12",
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-terser": "^5.1.3",
     "rollup-plugin-typescript2": "^0.25.3",
-    "typescript": "^3.7.3"
+    "source-map": "^0.7.3",
+    "typescript": "^3.7.3",
+    "webpack": "^4.41.2"
   },
   "dependencies": {
     "globby": "^10.0.1",
-    "gray-matter": "^4.0.2"
+    "gray-matter": "^4.0.2",
+    "loader-utils": "^1.2.3"
   }
 }
