--- a/package.json
+++ b/package.json
@@ -19,15 +19,22 @@
     "@babel/core": "^7.7.5",
     "@babel/preset-env": "^7.7.6",
     "@babel/preset-react": "^7.7.4",
+    "@babel/preset-typescript": "^7.7.4",
+    "@mdx-js/loader": "^1.5.1",
+    "@types/jest": "^24.0.23",
     "@types/loader-utils": "^1.1.3",
+    "@types/react": "^16.9.16",
     "@types/webpack": "^4.41.0",
     "@typescript-eslint/eslint-plugin": "^2.11.0",
     "@typescript-eslint/parser": "^2.11.0",
     "babel-jest": "^24.9.0",
+    "babel-loader": "^8.0.6",
     "babel-plugin-module-resolver": "^4.0.0",
     "builtin-modules": "^3.1.0",
     "eslint": "^6.7.2",
     "jest": "^24.9.0",
+    "memfs": "^3.0.1",
+    "react": "^16.12.0",
     "rollup": "^1.27.12",
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-commonjs": "^10.1.0",
@@ -35,12 +42,14 @@
     "rollup-plugin-terser": "^5.1.3",
     "rollup-plugin-typescript2": "^0.25.3",
     "source-map": "^0.7.3",
+    "ts-loader": "^6.2.1",
     "typescript": "^3.7.3",
     "webpack": "^4.41.2"
   },
   "dependencies": {
     "globby": "^10.0.1",
     "gray-matter": "^4.0.2",
-    "loader-utils": "^1.2.3"
+    "loader-utils": "^1.2.3",
+    "memory-fs": "^0.5.0"
   }
 }
