--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "node": ">=8"
   },
   "scripts": {
-    "lint": "eslint src/**/*",
+    "lint": "eslint src/**/*.ts",
     "build": "rollup -c rollup.config.js"
   },
   "devDependencies": {
