--- a/package.json
+++ b/package.json
@@ -48,9 +48,11 @@
     "webpack": "^4.41.2"
   },
   "dependencies": {
+    "capital-case": "^1.0.2",
     "globby": "^10.0.1",
     "gray-matter": "^4.0.2",
     "loader-utils": "^1.2.3",
-    "memory-fs": "^0.5.0"
+    "memory-fs": "^0.5.0",
+    "param-case": "^3.0.2"
   }
 }
