feat(loader): included MDX rendering process directly into loader

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,6 @@
     "strict": true,
     "target": "ES2019"
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "global.d.ts"],
   "exclude": ["node_modules", "tests/**/*"]
 }
