--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "@babel/preset-env": "^7.7.6",
     "@babel/preset-react": "^7.7.4",
     "@babel/preset-typescript": "^7.7.4",
-    "@mdx-js/loader": "^1.5.1",
     "@types/jest": "^24.0.23",
     "@types/loader-utils": "^1.1.3",
     "@types/react": "^16.9.16",
@@ -48,6 +47,8 @@
     "webpack": "^4.41.2"
   },
   "dependencies": {
+    "@mdx-js/mdx": "^1.5.2",
+    "@mdx-js/react": "^1.5.2",
     "capital-case": "^1.0.2",
     "globby": "^10.0.1",
     "gray-matter": "^4.0.2",
