--- a/package.json
+++ b/package.json
@@ -53,7 +53,6 @@
     "globby": "^10.0.1",
     "gray-matter": "^4.0.2",
     "loader-utils": "^1.2.3",
-    "memory-fs": "^0.5.0",
-    "param-case": "^3.0.2"
+    "memory-fs": "^0.5.0"
   }
 }
