--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "builtin-modules": "^3.1.0",
     "eslint": "^6.7.2",
     "jest": "^24.9.0",
-    "memfs": "^3.0.1",
+    "memory-fs": "^0.5.0",
     "react": "^16.12.0",
     "rollup": "^1.27.12",
     "rollup-plugin-babel": "^4.3.3",
@@ -48,11 +48,12 @@
   },
   "dependencies": {
     "@mdx-js/mdx": "^1.5.2",
-    "@mdx-js/react": "^1.5.2",
     "capital-case": "^1.0.2",
     "globby": "^10.0.1",
     "gray-matter": "^4.0.2",
-    "loader-utils": "^1.2.3",
-    "memory-fs": "^0.5.0"
+    "loader-utils": "^1.2.3"
+  },
+  "peerDependencies": {
+    "@mdx-js/react": "^1.5.2"
   }
 }
