--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@saschazar/mdx-enhanced-loader",
+  "name": "@saschazar/mdx-extended-loader",
   "version": "0.0.0-semantic-release",
   "description": "Easily wrap React components around your MDX files",
   "main": "index.min.js",
-  "repository": "https://github.com/saschazar21/mdx-enhanced-loader",
+  "repository": "https://github.com/saschazar21/mdx-extended-loader",
   "author": "Sascha Zarhuber <sascha.zarhuber@gmail.com> (https://sascha.work)",
   "license": "MIT",
   "private": false,
@@ -21,6 +21,7 @@
     "@babel/preset-env": "^7.7.6",
     "@babel/preset-react": "^7.7.4",
     "@babel/preset-typescript": "^7.7.4",
+    "@mdx-js/react": "^1.5.2",
     "@types/jest": "^24.0.23",
     "@types/loader-utils": "^1.1.3",
     "@types/react": "^16.9.16",
@@ -54,6 +55,7 @@
     "loader-utils": "^1.2.3"
   },
   "peerDependencies": {
-    "@mdx-js/react": "^1.5.2"
+    "@mdx-js/react": "^1.5.2",
+    "webpack": "^4.41.2"
   }
 }
