--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-terser": "^5.1.3",
     "rollup-plugin-typescript2": "^0.25.3",
+    "semantic-release": "^15.13.31",
     "source-map": "^0.7.3",
     "ts-loader": "^6.2.1",
     "typescript": "^3.7.3",
@@ -56,6 +57,7 @@
   },
   "peerDependencies": {
     "@mdx-js/react": "^1.5.2",
+    "react": "^16.12.0",
     "webpack": "^4.41.2"
   }
 }
