--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
     "moduleResolution": "node",
     "noImplicitAny": true,
     "paths": {
-      "*": ["*", "src/*", "test/*"]
+      "*": ["src/*", "test/*"]
     },
     "removeComments": true,
     "sourceMap": false,
