--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/webpack": "^4.41.0",
     "@typescript-eslint/eslint-plugin": "^2.11.0",
     "@typescript-eslint/parser": "^2.11.0",
+    "@zerollup/ts-transform-paths": "^1.7.8",
     "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-module-resolver": "^4.0.0",
