--- a/.travis.yml
+++ b/.travis.yml
@@ -11,14 +11,9 @@ jobs:
         - yarn test
     - stage: build
       name: 'Building and deploying to NPM'
-      script: yarn build
+      before_deploy:
+        - yarn build
       deploy:
-        - provider: npm
-          if: branch != master
-          edge: true
-          email: $NPM_EMAIL
-          api_token: $NPM_TOKEN
-          dry_run: true
         - provider: script
           edge: true
           script: npx semantic-release
