--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@babel/preset-react": "^7.7.4",
     "@babel/preset-typescript": "^7.7.4",
     "@mdx-js/react": "^1.5.2",
+    "@semantic-release/changelog": "^3.0.6",
+    "@semantic-release/git": "^7.0.18",
     "@types/jest": "^24.0.23",
     "@types/loader-utils": "^1.1.3",
     "@types/react": "^16.9.16",
