fix(types): moved types to root directory

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 index.js
 index.min.js
 parser.js
-types
+*.d.ts
+!global.d.ts
 
 # Created by https://www.gitignore.io/api/node,code
 # Edit at https://www.gitignore.io/?templates=node,code
