--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "allowSyntheticDefaultImports": true,
     "baseUrl": "./",
     "declaration": true,
-    "declarationDir": "types",
+    "declarationDir": "./",
     "jsx": "preserve",
     "module": "ESNext",
     "moduleResolution": "node",
