--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "node": ">=8"
   },
   "scripts": {
-    "lint": "eslint src/**/*.ts",
+    "lint": "eslint --ext .ts src",
     "test": "jest --coverage",
     "build": "rollup -c rollup.config.js"
   },
